switching b/w two images

--- a/ImageViews/src/main/resources/com/example/switchscenes/images.fxml
+++ b/ImageViews/src/main/resources/com/example/switchscenes/images.fxml
@@ -16,6 +16,6 @@
          <image>
             <Image url="@../../../../../../../jkk222.jpg" />
          </image></ImageView>
-      <Button layoutX="266.0" layoutY="289.0" mnemonicParsing="false" onAction="#switchToImage2" text="Button" />
+      <Button layoutX="266.0" layoutY="289.0" mnemonicParsing="false" onAction="#switchToImage2" onMouseDragEntered="#switchToImage2" text="Button" />
    </children>
 </AnchorPane>
