--- a/JavaFX/Tic-Tac-Toe/game.fxml
+++ b/JavaFX/Tic-Tac-Toe/game.fxml
@@ -2,18 +2,16 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="659.0" prefWidth="759.0" styleClass="welcome-bg" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.GameController">
    <children>
-      <GridPane gridLinesVisible="true" layoutX="93.0" layoutY="121.0" prefHeight="464.0" prefWidth="573.0" styleClass="gridLines" stylesheets="@style.css">
+      <GridPane fx:id="gridLayout" gridLinesVisible="true" layoutX="101.0" layoutY="97.0" prefHeight="484.0" prefWidth="573.0" styleClass="gridLines" stylesheets="@style.css">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -23,62 +21,76 @@
           <RowConstraints />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="238.0" prefWidth="219.0" styleClass="gridCells" stylesheets="@style.css" textFill="#8f3207ed" GridPane.rowIndex="1">
+            <Button fx:id="button00" mnemonicParsing="false" onAction="#clickCells" prefHeight="171.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" textFill="#d0c6cded">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button fx:id="cell11" mnemonicParsing="false" onAction="#clickCells" prefHeight="152.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="button10" mnemonicParsing="false" onAction="#clickCells" prefHeight="169.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" textFill="#ccbdbd" GridPane.columnIndex="1">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="169.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="button20" mnemonicParsing="false" onAction="#clickCells" prefHeight="171.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="165.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.rowIndex="2">
+            <Button fx:id="button01" mnemonicParsing="false" onAction="#clickCells" prefHeight="176.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.rowIndex="1">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="170.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button fx:id="button11" mnemonicParsing="false" onAction="#clickCells" prefHeight="170.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="163.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button fx:id="button21" mnemonicParsing="false" onAction="#clickCells" prefHeight="163.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="166.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.rowIndex="3">
+            <Button fx:id="button02" mnemonicParsing="false" onAction="#clickCells" prefHeight="158.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.rowIndex="2">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="156.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button fx:id="button12" mnemonicParsing="false" onAction="#clickCells" prefHeight="157.0" prefWidth="317.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#clickCells" prefHeight="153.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button fx:id="button22" mnemonicParsing="false" onAction="#clickCells" prefHeight="168.0" prefWidth="191.0" styleClass="gridCells" stylesheets="@style.css" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="Bookman Old Style Bold Italic" size="71.0" />
                </font>
             </Button>
          </children>
       </GridPane>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff841f48" height="80.0" layoutX="156.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="431.0" />
-      <Label fx:id="nameLabel" alignment="CENTER" layoutX="164.0" layoutY="24.0" prefHeight="47.0" prefWidth="413.0" textFill="#c31f1f">
+      <FontAwesomeIcon fill="#ce1d1d" glyphName="USER" layoutX="83.0" layoutY="63.0" size="4em" wrappingWidth="58.0" />
+      <TextField fx:id="nameLabel" alignment="CENTER" editable="false" layoutX="135.0" layoutY="21.0" prefHeight="48.0" prefWidth="323.0" styleClass="textField-name" stylesheets="@style.css">
          <font>
-            <Font name="Felix Titling" size="28.0" />
+            <Font name="Bauhaus 93" size="26.0" />
          </font>
-      </Label>
-      <FontAwesomeIcon fill="#ce1d1d" glyphName="USER" layoutX="194.0" layoutY="66.0" size="4em" wrappingWidth="58.0" />
+      </TextField>
+      <Button fx:id="reset" layoutX="496.0" layoutY="14.0" mnemonicParsing="false" onAction="#resetBoardButton" prefHeight="30.0" prefWidth="177.0" styleClass="pause" stylesheets="@style.css" text="Reset Board" textFill="#f5f0f0f2">
+         <font>
+            <Font name="Bookman Old Style Bold Italic" size="18.0" />
+         </font>
+         <graphic>
+            <FontAwesomeIcon />
+         </graphic>
+      </Button>
+      <Button layoutX="496.0" layoutY="56.0" mnemonicParsing="false" onAction="#resetPlayerButton" prefHeight="30.0" prefWidth="177.0" styleClass="button-continue" stylesheets="@style.css" text="Change Players" textFill="#f8f5f5">
+         <graphic>
+            <FontAwesomeIcon glyphName="USERS" />
+         </graphic>
+         <font>
+            <Font name="Bookman Old Style Bold Italic" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
